@@ -51,6 +51,9 @@ Options useful in the com.apple.Boot.plist file:
   "Hide Partition"          Remove unwanted partition(s) from the boot menu.
     =hd(x,y) [hd(m,n)]
 
+  "Rename Partition"          Rename partition(s) for the boot menu.
+    =hd(x,y) <alias>[;hd(m,n) <alias2> ...]
+
   GUI=No                    Disable the GUI (enabled by default).
   "Boot Banner"=Yes|No      Show boot banner in GUI mode (enabled by default).
   "Legacy Logo"=Yes|No      Use the legacy grey apple logo (disabled by default).
